[package]
name = "ethabi"
version = "0.1.0"
authors = ["hazae41 <hazae41@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.50"
ethabi = "13.0.0"